Improved ide support

--- a/build.gradle
+++ b/build.gradle
@@ -22,3 +22,11 @@ dependencies {
 task stage {
     dependsOn installDist
 }
+
+idea {
+    project {
+        jdkName = "1.8"
+        languageLevel = "1.8"
+        vcs = "Git"
+    }
+}
